fix: add multilinguality to save button

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -5,5 +5,6 @@
   "All": "সব",
   "Incomplete":"অসম্পূর্ণ",
   "Complete": "সম্পূর্ণ",
-  "NoTask": "আপনি কোনো টাস্ক যোগ করেননি। অনুগ্রহ করে, একটি যোগ করুন."
+  "NoTask": "আপনি কোনো টাস্ক যোগ করেননি। অনুগ্রহ করে, একটি যোগ করুন.",
+  "Save": "সংরক্ষণ করুন"
 }
