i18n: add store for current locale, multilinguality added to navbar select tag

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -6,5 +6,25 @@
   "Incomplete":"অসম্পূর্ণ",
   "Complete": "সম্পূর্ণ",
   "NoTask": "আপনি কোনো টাস্ক যোগ করেননি। অনুগ্রহ করে, একটি যোগ করুন.",
-  "Save": "সংরক্ষণ করুন"
+  "Save": "সংরক্ষণ করুন",
+  "language": "ভাষা",
+    "SelectLanguage": "ভাষা নির্বাচন করুন",
+    "search": "অনুসন্ধান করুন",
+    "min": "ন্যূনতম",
+    "max": "সর্বোচ্চ",
+    "CreatedAt": "তৈরি করা হয়েছে",
+    "CompletedIn": "সম্পন্ন হতে সময় লেগেছে",
+    "characters": "অক্ষর",
+    "not-found": "কোন {item} পাওয়া যায়নি",
+    "load-more": "আরও লোড করুন",
+    "loading": "লোড হচ্ছে",
+    "validation": {
+        "todo": {
+            "title": {
+                "required": "শিরোনাম প্রয়োজন",
+                "min-length": "শিরোনাম অন্তত {minLength} অক্ষর হতে হবে",
+                "max-length": "শিরোনাম সর্বোচ্চ {maxLength} অক্ষর হতে পারে"
+            }
+        }
+    }
 }
