--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -5,5 +5,7 @@
   "All": "সব",
   "Incomplete":"অসম্পূর্ণ",
   "Complete": "সম্পূর্ণ",
-  "NoTask": "আপনি কোনো টাস্ক যোগ করেননি। অনুগ্রহ করে, একটি যোগ করুন."
+  "NoTask": "আপনি কোনো টাস্ক যোগ করেননি। অনুগ্রহ করে, একটি যোগ করুন.",
+  "CreatedAt": "তৈরীর তারিখ",
+  "Completed": "সম্পন্ন হয়েছে"
 }
