fix: show 'show less ' button only when load more button is already shown

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -11,5 +11,5 @@
   "CompletedIn": "Completed",
   "SelectLanguage": "Select Language",
   "load-more": "Load More",
-  "show-less": "Show More"
+  "show-less": "Show Less"
 }
