--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -8,7 +8,7 @@
   "NoTask": "You didn’t add any task. Please, add one.",
   "Save": "Save",
   "CreatedAt": "Created At",
-  "CompletedIn": "Completed",
+  "CompletedIn": "Completed in",
   "SelectLanguage": "Select Language",
   "load-more": "Load More",
   "show-less": "Show Less",
