fix: check for html tags, special characters in input

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -22,7 +22,7 @@
   "validation": {
       "todo": {
           "title": {
-              "required": "শিরোনাম প্রয়োজন"
+              "required": "অবৈধ ইনপুট"
           }
       }
   }
