--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -15,7 +15,7 @@
   "validation": {
     "todo": {
         "title": {
-            "required": "Field is empty"
+            "required": "Invalid Field"
         }
     }
 }
