fix: i18n added to toast messages

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -25,6 +25,7 @@
               "required": "অবৈধ ইনপুট"
           }
       }
-  }
-
+  },
+  "alert.message.success": "পরিবর্তন সফলভাবে সংরক্ষিত হয়েছে",
+  "alert.message.error": "কিছু ভুল হয়েছে !"
 }
