--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -18,5 +18,7 @@
             "required": "Invalid Field"
         }
     }
-}
+},
+"alert.message.success": "Changes are saved successfully",
+"alert.message.error": "Something went wrong !"
 }
