--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -6,6 +6,8 @@
   "Incomplete":"Incomplete",
   "Complete": "Complete",
   "NoTask": "You didn’t add any task. Please, add one.",
+  "NoCompleteTask": "No Incomplete Task",
+  "NoCompleteTask": "No Complete Task",
   "Save": "Save",
   "CreatedAt": "Created At",
   "CompletedIn": "Completed in",
