translate no task message for filter

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -6,8 +6,8 @@
   "Incomplete":"Incomplete",
   "Complete": "Complete",
   "NoTask": "You didn’t add any task. Please, add one.",
-  "NoCompleteTask": "No Incomplete Task",
   "NoCompleteTask": "No Complete Task",
+  "NoIncompleteTask": "No Incomplete Task",
   "Save": "Save",
   "CreatedAt": "Created At",
   "CompletedIn": "Completed in",
