integrate supabase update, delete, change task operation

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -9,7 +9,7 @@
     "NoCompleteTask": "No Complete Task",
     "NoIncompleteTask": "No Incomplete Task",
     "Save": "Save",
-    "CreatedAt": "Created At",
+    "created_at": "Created At",
     "CompletedIn": "Completed in",
     "SelectLanguage": "Select Language",
     "load-more": "Load More",
