--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -14,7 +14,7 @@
     "search": "অনুসন্ধান করুন",
     "min": "ন্যূনতম",
     "max": "সর্বোচ্চ",
-    "CreatedAt": "তৈরীর তারিখ",
+    "created_at": "তৈরীর তারিখ",
     "Completed": "সম্পন্ন হতে সময় লেগেছে",
     "characters": "অক্ষর",
     "not-found": "কোন {item} পাওয়া যায়নি",
