add i18n to see more

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -29,5 +29,6 @@
       }
   },
   "alert.message.success": "পরিবর্তন সফলভাবে সংরক্ষিত হয়েছে",
-  "alert.message.error": "কিছু ভুল হয়েছে !"
+  "alert.message.error": "কিছু ভুল হয়েছে !",
+  "btn.seeMore": "আরো দেখুন"
 }
