remove vue-i18n warning

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -15,7 +15,7 @@
   "min": "ন্যূনতম",
   "max": "সর্বোচ্চ",
   "CreatedAt": "তৈরীর তারিখ",
-  "Completed": "সম্পন্ন হতে সময় লেগেছে",
+  "CompletedIn": "সম্পন্ন হতে সময় লেগেছে",
   "characters": "অক্ষর",
   "not-found": "কোন {item} পাওয়া যায়নি",
   "load-more": "আরও লোড করুন",
