--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -35,5 +35,6 @@
 "alert.delete.message.error": "Unable To Delete",
 "alert.search.message.error": "Unable To search",
 "alert.complete.message.error":"Unable to Complete",
-"NoMatchFound": "No Match Found"
+"NoMatchFound": "No Match Found",
+"nav.logo": "TODOS"
 }
