resolve sweetalert test warnings

--- a/lang/bn-Bn.json
+++ b/lang/bn-Bn.json
@@ -44,5 +44,6 @@
    "alert.search.message.error": "টাস্ক অনুসন্ধান করতে অক্ষম",
    "alert.complete.message.error":"টাস্ক সম্পূর্ণ করতে অক্ষম",
    "NoMatchFound": "কোনো টাস্ক পাওয়া যায়নি",
-   "nav.logo": "টোডোস"
+   "nav.logo": "টোডোস",
+   "alert.task.description" : "কার্য বিবরণী"
 }
